# OSH_Datasets

./: .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  OHR_api.py  Open_Hardware_Repository_api.py  README.md  TODO.md  analyze_dataset.py  coverage_matrix.csv  extract_mendeley_repos.py  extract_repos.py  hackaday_api_test.ipynb  mendeley_fetcher.py  mendeley_oauth.py  ohx_repos.txt  ohx_sourcefile.txt  platform_schemas_complete.md  prompt_extract.md  prompt_extractTune.md  pyproject.toml
.github/: ISSUE_GITHUB_ENRICHMENT.md
Documentation Evaluation Testing/: LLM_Evaluation_Prompt_Pass1.rtf
EDA/: doc_quality_eda.ipynb  doc_quality_plan.md
OHR Project Classifier/: final_classifications.csv
OSHWA/: OSHWA_projects.json  oshwa_data_script.ipynb
Open_Hardware_Repositories/: OHR_repos.csv  OHR_repos.json  ohr_data_script.ipynb
app/: Home.py  db_utils.py
code/: gh_data_extraction.py  gh_opt.py  gh_repometrics.py  github_metadata_extraction.py  hardwareIO.py  kitspace_projectURL.py  kitspace_scraper.py  ohx_links.py  open_alex.py
data/: kitspace_results.json
documentation_evaluation/: OSH_Documentation_Pass1_Test.rtf
hardwareio/: clean_ohio.py  ohio_bom.csv
ohr_classifier/: final_classifications.json  ohr_classifier_cleaned.py
scripts/: batch_cron.sh  compare_3way_random.py  compare_flash_lite.py  compare_llm_models.py  migrate_bom_footprint.py  migrate_bom_normalize.py  migrate_bom_processed.py  migrate_doc_quality.py  migrate_repo_url.py  run_github_overnight.sh  test_github_pipeline.py  test_oemsecrets.py
tests/: test_bom_normalize.py  test_db.py  (+11 more)
(+272 files in other folders)
